Faster schematic discover from jar files (#205)
reworked loading from jars based on patch by @malte0811
removed unnecessary duplicated getStream() calls